samples/_failures_safe/1761649733_d67c36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_512cfc76.c: In function ‘main’:
./samples/SAFE/__tmp_512cfc76.c:132:33: error: missing terminating " character
  132 |         {"2024-01-15 10:35:30", "CR
      |                                 ^~~
./samples/SAFE/__tmp_512cfc76.c:132:9: error: expected expression at end of input
  132 |         {"2024-01-15 10:35:30", "CR
      |         ^
./samples/SAFE/__tmp_512cfc76.c:132:9: error: expected declaration or statement at end of input
